@@ -1,7 +1,9 @@
 // Copyright (c) YugaByte, Inc.
 package com.yugabyte.yw.commissioner.tasks;
 
+import com.google.api.client.util.Throwables;
 import com.yugabyte.yw.commissioner.BaseTaskDependencies;
+import com.yugabyte.yw.commissioner.ITask;
 import com.yugabyte.yw.commissioner.UserTaskDetails;
 import com.yugabyte.yw.commissioner.tasks.subtasks.xcluster.XClusterConfigModifyTables;
 import com.yugabyte.yw.common.DrConfigStates.SourceUniverseState;
@@ -12,6 +14,7 @@ import com.yugabyte.yw.common.Util;
 import com.yugabyte.yw.common.XClusterUniverseService;
 import com.yugabyte.yw.common.config.GlobalConfKeys;
 import com.yugabyte.yw.common.config.UniverseConfKeys;
+import com.yugabyte.yw.common.services.YBClientService;
 import com.yugabyte.yw.forms.BackupRequestParams;
 import com.yugabyte.yw.forms.BackupTableParams;
 import com.yugabyte.yw.forms.DrConfigCreateForm;
@@ -25,11 +28,13 @@ import com.yugabyte.yw.models.Universe;
 import com.yugabyte.yw.models.XClusterConfig;
 import com.yugabyte.yw.models.XClusterConfig.ConfigType;
 import com.yugabyte.yw.models.XClusterConfig.XClusterConfigStatusType;
+import com.yugabyte.yw.models.XClusterNamespaceConfig;
 import com.yugabyte.yw.models.XClusterTableConfig;
 import java.io.File;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -37,12 +42,15 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import javax.inject.Inject;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.yb.CommonTypes;
+import org.yb.client.IsXClusterBootstrapRequiredResponse;
+import org.yb.client.YBClient;
 import org.yb.master.MasterDdlOuterClass;
 import org.yb.master.MasterTypes;
 
@@ -50,6 +58,7 @@ import org.yb.master.MasterTypes;
 public class CreateXClusterConfig extends XClusterConfigTaskBase {
 
   public static final long TIME_BEFORE_DELETE_BACKUP_MS = TimeUnit.DAYS.toMillis(1);
+  private static final long DELAY_BETWEEN_RETRIES_MS = TimeUnit.SECONDS.toMillis(10);
 
   @Inject
   protected CreateXClusterConfig(
@@ -60,6 +69,95 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
   public List<Restore> restoreList = new ArrayList<>();
 
   public List<Backup> backupList = new ArrayList<>();
+
+  public Map<String, Boolean> dbIdBootstrapRequiredMap = new HashMap<>();
+
+  protected boolean checkBootstrapRequired(
+      String dbId,
+      YBClientService ybService,
+      Universe sourceUniverse,
+      XClusterConfig xClusterConfig) {
+    if (dbIdBootstrapRequiredMap.containsKey(dbId)) {
+      log.debug(
+          "Db: {} requires bootstrapping: {} from cache.",
+          dbId,
+          dbIdBootstrapRequiredMap.get(dbId));
+      return dbIdBootstrapRequiredMap.get(dbId);
+    }
+
+    Duration xclusterWaitTimeout =
+        this.confGetter.getConfForScope(sourceUniverse, UniverseConfKeys.xclusterSetupAlterTimeout);
+    long sleepTimeMs;
+    int iterationNum = 0;
+    Duration currentElapsedTime;
+
+    try (YBClient client =
+        ybService.getClient(
+            sourceUniverse.getMasterAddresses(), sourceUniverse.getCertificateNodetoNode())) {
+      List<String> lastErrors = new ArrayList<>();
+      boolean result =
+          doWithConstTimeout(
+              DELAY_BETWEEN_RETRIES_MS,
+              xclusterWaitTimeout.toMillis(),
+              () -> {
+                try {
+                  lastErrors.clear();
+                  IsXClusterBootstrapRequiredResponse completionResponse =
+                      client.isXClusterBootstrapRequired(
+                          xClusterConfig.getReplicationGroupName(), dbId);
+
+                  if (completionResponse.hasError()) {
+                    lastErrors.add(
+                        String.format(
+                            "Master error: %s when fetching isXClusterBootstrapRequired for db %s",
+                            completionResponse.errorMessage(), dbId));
+                  }
+
+                  log.debug(
+                      "CheckBootstrapRequired, checkpointing status is complete: {}, for universe:"
+                          + " {}, xClusterConfig: {}, dbId: {}",
+                      !completionResponse.isNotReady(),
+                      sourceUniverse.getUniverseUUID(),
+                      xClusterConfig.getName(),
+                      dbId);
+
+                  if (completionResponse.isNotReady()) {
+                    lastErrors.add(
+                        String.format(
+                            "Db %s should be finished checkpointing otherwise isBootstrapRequired"
+                                + " bit is not set",
+                            dbId));
+                  }
+                  if (lastErrors.isEmpty()) {
+                    dbIdBootstrapRequiredMap.put(
+                        dbId, completionResponse.itInitialBootstrapRequired());
+                    log.debug(
+                        "Bootstrap required for db {}: {}",
+                        dbId,
+                        completionResponse.itInitialBootstrapRequired());
+                  }
+                  log.debug(
+                      "Last errors for checking db: {} if needs boostrapping: {}",
+                      dbId,
+                      lastErrors);
+                  return lastErrors.isEmpty();
+                } catch (Exception e) {
+                  log.error("Hit unexpected error: {}", e.getMessage());
+                  return false;
+                }
+              });
+      if (!result) {
+        throw new RuntimeException(
+            String.format(
+                "Failed to execute isInitialBootstrapRequired rpc. Error details: %s",
+                String.join(",", lastErrors)));
+      }
+    } catch (Exception e) {
+      log.error("{} hit error : {}", getName(), e.getMessage());
+      Throwables.propagate(e);
+    }
+    return dbIdBootstrapRequiredMap.get(dbId);
+  }
 
   @Override
   public void run() {
@@ -127,14 +225,16 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
       xClusterConfig.updateStatusForTables(
           tablesInPendingStatus, XClusterTableConfig.Status.Failed);
 
-      // Prevent all other DR tasks except delete from running.
-      log.info(
-          "Setting the dr config state of xCluster config {} to {} from {}",
-          xClusterConfig.getUuid(),
-          State.Error,
-          xClusterConfig.getDrConfig().getState());
-      xClusterConfig.getDrConfig().setState(State.Error);
-      xClusterConfig.getDrConfig().update();
+      if (xClusterConfig.isUsedForDr()) {
+        // Prevent all other DR tasks except delete from running.
+        log.info(
+            "Setting the dr config state of xCluster config {} to {} from {}",
+            xClusterConfig.getUuid(),
+            State.Error,
+            xClusterConfig.getDrConfig().getState());
+        xClusterConfig.getDrConfig().setState(State.Error);
+        xClusterConfig.getDrConfig().update();
+      }
 
       // Set backup and restore status to failed and alter load balanced.
       boolean isLoadBalancerAltered = false;
@@ -176,7 +276,6 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     sourceCertificate.ifPresent(
         cert ->
             createTransferXClusterCertsCopyTasks(
-                xClusterConfig,
                 targetUniverse.getNodes(),
                 xClusterConfig.getReplicationGroupName(),
                 cert,
@@ -202,8 +301,8 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     if (xClusterConfig.getType() != ConfigType.Db) {
       tableIdsNotNeedBootstrap = getTableIdsNotNeedBootstrap(getTableIds(requestedTableInfoList));
     }
-    if (xClusterConfig.getType() == ConfigType.Db
-        || !CollectionUtils.isEmpty(tableIdsNotNeedBootstrap)) {
+    if (!CollectionUtils.isEmpty(tableIdsNotNeedBootstrap)
+        && xClusterConfig.getType() != ConfigType.Db) {
       addSubtasksForTablesNotNeedBootstrap(
           xClusterConfig,
           tableIdsNotNeedBootstrap,
@@ -218,6 +317,7 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
         xClusterConfig,
         taskParams().getBootstrapParams(),
         dbToTablesInfoMapNeedBootstrap,
+        sourceDbIds,
         !CollectionUtils.isEmpty(tableIdsNotNeedBootstrap),
         pitrParams);
 
@@ -296,8 +396,8 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
 
     // Set up PITRs for txn/db scoped xCluster.
     if (xClusterConfig.getType() != (ConfigType.Basic)) {
+      Set<MasterTypes.NamespaceIdentifierPB> namespaces;
 
-      Set<MasterTypes.NamespaceIdentifierPB> namespaces = null;
       if (xClusterConfig.getType() == ConfigType.Db) {
         namespaces = getNamespaces(sourceUniverse, sourceDbIds);
         if (namespaces.size() != sourceDbIds.size()) {
@@ -404,36 +504,82 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
 
   protected void addSubtasksForTablesNeedBootstrap(
       XClusterConfig xClusterConfig,
-      XClusterConfigCreateFormData.BootstrapParams bootstrapParams,
-      Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
-          dbToTablesInfoMapNeedBootstrap,
+      @Nullable XClusterConfigCreateFormData.BootstrapParams bootstrapParams,
+      @Nullable
+          Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
+              dbToTablesInfoMapNeedBootstrap,
+      Set<String> sourceDbIds,
       boolean isReplicationConfigCreated,
       @Nullable DrConfigCreateForm.PitrParams pitrParams) {
     Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.getSourceUniverseUUID());
     Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.getTargetUniverseUUID());
 
-    // TODO: Support bootstrapping for db scoped replication.
-    if (xClusterConfig.getType() == ConfigType.Db) return;
-
-    for (String namespaceName : dbToTablesInfoMapNeedBootstrap.keySet()) {
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap =
-          dbToTablesInfoMapNeedBootstrap.get(namespaceName);
-      if (tablesInfoListNeedBootstrap.isEmpty()) {
-        throw new RuntimeException(
-            String.format(
-                "tablesInfoListNeedBootstrap in namespaceName %s is empty", namespaceName));
+    Map<String, String> dbNameToDbIdMap = new HashMap<>();
+    if (xClusterConfig.getType() == ConfigType.Db) {
+      Set<MasterTypes.NamespaceIdentifierPB> namespaces =
+          getNamespaces(sourceUniverse, sourceDbIds);
+      for (MasterTypes.NamespaceIdentifierPB namespace : namespaces) {
+        dbNameToDbIdMap.put(namespace.getName(), namespace.getId().toStringUtf8());
       }
-      CommonTypes.TableType tableType = tablesInfoListNeedBootstrap.get(0).getTableType();
-      Set<String> tableIdsNeedBootstrap = getTableIds(tablesInfoListNeedBootstrap);
-      log.info(
-          "Creating subtasks to set up replication using bootstrap for tables {} in "
-              + "keyspace {}",
-          tableIdsNeedBootstrap,
-          namespaceName);
+    }
 
-      // Create checkpoints for the tables.
-      createBootstrapProducerTask(xClusterConfig, tableIdsNeedBootstrap)
-          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.BootstrappingProducer);
+    for (String namespaceName :
+        dbToTablesInfoMapNeedBootstrap != null
+            ? dbToTablesInfoMapNeedBootstrap.keySet()
+            : dbNameToDbIdMap.keySet()) {
+      String namespaceId = dbNameToDbIdMap.get(namespaceName);
+      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap = null;
+
+      // For db scoped replication, we will skip backup/restore subtasks at runtime if bootstrapping
+      //   is not required. For non-db scoped replication, we always perform backup restore here.
+      Predicate<ITask> bootstrapRequiredPredicate =
+          (task) -> {
+            if (xClusterConfig.getType() == ConfigType.Db) {
+              return checkBootstrapRequired(namespaceId, ybService, sourceUniverse, xClusterConfig);
+            }
+            return true;
+          };
+
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        tablesInfoListNeedBootstrap = dbToTablesInfoMapNeedBootstrap.get(namespaceName);
+        if (tablesInfoListNeedBootstrap.isEmpty()) {
+          throw new RuntimeException(
+              String.format(
+                  "tablesInfoListNeedBootstrap in namespaceName %s is empty", namespaceName));
+        }
+      }
+      CommonTypes.TableType tableType =
+          xClusterConfig.getType() == ConfigType.Db
+              ? CommonTypes.TableType.PGSQL_TABLE_TYPE
+              : tablesInfoListNeedBootstrap.get(0).getTableType();
+      Set<String> tableIdsNeedBootstrap = null;
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        tableIdsNeedBootstrap = getTableIds(tablesInfoListNeedBootstrap);
+        log.info(
+            "Creating subtasks to set up replication using bootstrap for tables {} in "
+                + "keyspace {}",
+            tableIdsNeedBootstrap,
+            namespaceName);
+      }
+
+      if (xClusterConfig.getType() == ConfigType.Db) {
+
+        if (!xClusterConfig.getDbIds().contains(namespaceId)) {
+          xClusterConfig.addNamespaces(Set.of(namespaceId));
+        }
+        xClusterConfig.updateStatusForNamespace(
+            namespaceId, XClusterNamespaceConfig.Status.Updating);
+        if (!isReplicationConfigCreated) {
+          createCreateOutboundReplicationGroupTask(
+              xClusterConfig, Collections.singleton(namespaceId));
+        } else {
+          createXClusterAddNamespaceToOutboundReplicationGroupTask(xClusterConfig, namespaceId);
+        }
+      } else {
+        // Create checkpoints for the tables.
+        createBootstrapProducerTask(xClusterConfig, tableIdsNeedBootstrap)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.BootstrappingProducer);
+      }
 
       // Create the following subtask only when the subtasks to set up replication for the first
       // namespace are being created.
@@ -453,14 +599,26 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
               && targetUniverse.isYbcEnabled()
               && confGetter.getGlobalConf(GlobalConfKeys.enableYbcForXCluster);
       BackupRequestParams backupRequestParams =
-          getBackupRequestParams(sourceUniverse, bootstrapParams, tablesInfoListNeedBootstrap);
+          getBackupRequestParams(
+              sourceUniverse,
+              bootstrapParams,
+              tablesInfoListNeedBootstrap,
+              namespaceName,
+              tableType);
       Backup backup =
           createAllBackupSubtasks(
-              backupRequestParams, UserTaskDetails.SubTaskGroupType.CreatingBackup, useYbc);
+              backupRequestParams,
+              UserTaskDetails.SubTaskGroupType.CreatingBackup,
+              useYbc,
+              null,
+              bootstrapRequiredPredicate,
+              true /* forXCluster */);
       backupList.add(backup);
 
-      // Assign the created backup UUID for the tables in the DB.
-      xClusterConfig.updateBackupForTables(tableIdsNeedBootstrap, backup);
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        // Assign the created backup UUID for the tables in the DB.
+        xClusterConfig.updateBackupForTables(tableIdsNeedBootstrap, backup);
+      }
 
       // Before dropping the tables on the target universe, delete the associated PITR configs.
       Optional<PitrConfig> pitrConfigOptional =
@@ -469,7 +627,7 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
               tableType,
               namespaceName); // Need to drop pitr configs that may be dangling.
       boolean hadPitrBeforeDr = false;
-      if (xClusterConfig.getType().equals(ConfigType.Txn)) {
+      if (xClusterConfig.getType() != ConfigType.Basic) {
         if (pitrConfigOptional.isPresent()) {
           hadPitrBeforeDr = true;
         }
@@ -493,16 +651,16 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
                         tableInfo.getRelationType()
                             != MasterTypes.RelationType.INDEX_TABLE_RELATION)
                 .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
-                .collect(Collectors.toList());
+                .toList();
         List<String> tableNamesToDeleteOnTargetUniverse =
             getTableInfoList(targetUniverse).stream()
                 .filter(
                     tableInfo ->
-                        tableType.equals(tableInfo.getTableType())
+                        tableType == tableInfo.getTableType()
                             && tableNamesNeedBootstrap.contains(tableInfo.getName())
                             && tableInfo.getNamespace().getName().equals(namespaceName))
                 .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
-                .collect(Collectors.toList());
+                .toList();
         createDeleteTablesFromUniverseTask(
                 targetUniverse.getUniverseUUID(),
                 Collections.singletonMap(namespaceName, tableNamesToDeleteOnTargetUniverse))
@@ -512,7 +670,8 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
         createDeleteRemnantStreamsTask(targetUniverse.getUniverseUUID(), namespaceName);
         // If the table type is YSQL, delete the database from the target universe before restore.
         createDeleteKeySpaceTask(
-            namespaceName, CommonTypes.TableType.PGSQL_TABLE_TYPE, true /*ysqlForce*/);
+                namespaceName, CommonTypes.TableType.PGSQL_TABLE_TYPE, true /*ysqlForce*/)
+            .setShouldRunPredicate(bootstrapRequiredPredicate);
       }
 
       // Wait for sometime to make sure the above drop database has reached all the nodes.
@@ -537,20 +696,30 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
       // Restore to the target universe.
       RestoreBackupParams restoreBackupParams =
           getRestoreBackupParams(sourceUniverse, targetUniverse, backupRequestParams, backup);
+      // For db scoped replication, we will skip restore if bootstrapping was not required.
       Restore restore =
           createAllRestoreSubtasks(
-              restoreBackupParams, UserTaskDetails.SubTaskGroupType.RestoringBackup);
+              restoreBackupParams,
+              UserTaskDetails.SubTaskGroupType.RestoringBackup,
+              bootstrapRequiredPredicate,
+              true /* forXCluster */);
       restoreList.add(restore);
 
-      // Assign the created restore UUID for the tables in the DB.
-      xClusterConfig.updateRestoreForTables(tableIdsNeedBootstrap, restore);
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        // Assign the created restore UUID for the tables in the DB.
+        xClusterConfig.updateRestoreForTables(tableIdsNeedBootstrap, restore);
 
-      // Set the restore time for the tables in the DB.
-      createSetRestoreTimeTask(xClusterConfig, tableIdsNeedBootstrap)
-          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.RestoringBackup);
+        // Set the restore time for the tables in the DB and update restore object to completed
+        // state.
+        createSetRestoreTimeTask(xClusterConfig, tableIdsNeedBootstrap)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.RestoringBackup);
+      } else {
+        createSetRestoreStateTask(restore, Restore.State.Completed)
+            .setShouldRunPredicate(bootstrapRequiredPredicate);
+      }
 
       // Recreate the PITR config for txn xCluster.
-      if (xClusterConfig.getType().equals(ConfigType.Txn)) {
+      if (xClusterConfig.getType() != ConfigType.Basic) {
         long retentionPeriodSeconds;
         long snapshotIntervalSeconds;
         if (xClusterConfig.isUsedForDr() && Objects.nonNull(pitrParams)) {
@@ -578,16 +747,34 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
             !hadPitrBeforeDr);
       }
 
+      if (xClusterConfig.getType() == ConfigType.Db) {
+        // Delete backup restore objects here if bootstrappig was not required as backup and
+        //  restore objects were generated during subtask creation.
+        createDeleteXClusterBackupRestoreEntriesTask(backup, restore)
+            .setShouldRunPredicate(bootstrapRequiredPredicate.negate());
+      }
+
       if (isReplicationConfigCreated) {
-        // If the xCluster config is already created, add the bootstrapped tables to the created
-        // xCluster config.
-        createXClusterConfigModifyTablesTask(
-                xClusterConfig, tableIdsNeedBootstrap, XClusterConfigModifyTables.Params.Action.ADD)
-            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        if (xClusterConfig.getType() == ConfigType.Db) {
+          createAddNamespaceToXClusterReplicationTask(xClusterConfig, namespaceId);
+        } else {
+          // If the xCluster config is already created, add the bootstrapped tables to the created
+          // xCluster config.
+          createXClusterConfigModifyTablesTask(
+                  xClusterConfig,
+                  tableIdsNeedBootstrap,
+                  XClusterConfigModifyTables.Params.Action.ADD)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        }
       } else {
         // Set up the replication config.
-        createXClusterConfigSetupTask(xClusterConfig, tableIdsNeedBootstrap)
-            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        if (xClusterConfig.getType() == ConfigType.Db) {
+          createXClusterDbReplicationSetupTask(xClusterConfig)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        } else {
+          createXClusterConfigSetupTask(xClusterConfig, tableIdsNeedBootstrap)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        }
         isReplicationConfigCreated = true;
       }
     }
@@ -664,7 +851,10 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
   static BackupRequestParams getBackupRequestParams(
       Universe sourceUniverse,
       XClusterConfigCreateFormData.BootstrapParams bootstrapParams,
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap) {
+      @Nullable
+          List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap,
+      String namespaceName,
+      CommonTypes.TableType tableType) {
     BackupRequestParams backupRequestParams;
     if (bootstrapParams != null && bootstrapParams.backupRequestParams != null) {
       backupRequestParams = new BackupRequestParams();
@@ -677,7 +867,7 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
       // Use the last storage config used for a successful backup as the default one.
       Optional<Backup> latestCompletedBackupOptional =
           Backup.fetchLatestByState(backupRequestParams.customerUUID, Backup.BackupState.Completed);
-      if (!latestCompletedBackupOptional.isPresent()) {
+      if (latestCompletedBackupOptional.isEmpty()) {
         throw new RuntimeException(
             "bootstrapParams in XClusterConfigCreateFormData is null, and storageConfigUUID "
                 + "cannot be determined based on the latest successful backup");
@@ -691,7 +881,7 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     // These parameters are pre-set. Others either come from the user, or the defaults are good.
     backupRequestParams.setUniverseUUID(sourceUniverse.getUniverseUUID());
     backupRequestParams.customerUUID = Customer.get(sourceUniverse.getCustomerId()).getUuid();
-    backupRequestParams.backupType = tablesInfoListNeedBootstrap.get(0).getTableType();
+    backupRequestParams.backupType = tableType;
     backupRequestParams.timeBeforeDelete = TIME_BEFORE_DELETE_BACKUP_MS;
     backupRequestParams.expiryTimeUnit = com.yugabyte.yw.models.helpers.TimeUnit.MILLISECONDS;
     // Set to true because it is a beta version of bootstrapping, and we need to debug it.
@@ -704,7 +894,7 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     }
     backupRequestParams.keyspaceTableList = new ArrayList<>();
     BackupRequestParams.KeyspaceTable keyspaceTable = new BackupRequestParams.KeyspaceTable();
-    keyspaceTable.keyspace = tablesInfoListNeedBootstrap.get(0).getNamespace().getName();
+    keyspaceTable.keyspace = namespaceName;
     if (backupRequestParams.backupType != CommonTypes.TableType.PGSQL_TABLE_TYPE) {
       List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesNeedBootstrapInfoList =
           tablesInfoListNeedBootstrap.stream()
@@ -713,7 +903,7 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
               .filter(
                   tableInfo ->
                       tableInfo.getRelationType() != MasterTypes.RelationType.INDEX_TABLE_RELATION)
-              .collect(Collectors.toList());
+              .toList();
       keyspaceTable.tableNameList =
           tablesNeedBootstrapInfoList.stream()
               .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
